@@ -1,2 +1,1 @@
-1) Polardemo, logarithmic changes axis scales
-2) Alignment of symbols
+1) style sheets
